kubernetes/apps/networking/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    ns: networking
