kubernetes/apps/networking/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: networking
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
